# contexterGui

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  FIXME.md  SUBMISSION_GUIDE.md  TODO-SPELLING.md  build.rs  check_underlines.sh  libocr_helper.dylib  ocr_helper  open_addin.sh  reconnect_addin.sh  reload_addin.sh  scan_underlines.applescript  test-textarea.html  test_errors.sh  testingStrategy.md  upload_to_s3.py
.github/workflows/: release-windows.yml
assets/: Spell.icns
dll/acapela/data/Norwegian/Kari22k_NV/: Kari22k_NV.conf  Kari22k_NV.nfo  kari.spk  kari_nv_22k.dsc  non_22k_nv.ann  non_22k_nv_hparams.cpt  non_22k_nv_mappings.cpt  non_sounds_kari.lst
docs/: SCHOOL_DEPLOYMENT.md  adding-a-language.md  qa-regression-catalog.md  repos.md
extension/: LISTING.md  background.js  com.cognio.spell.bridge.json  com.norsktale.bridge.json  content.js  gdocs-inject.js  install_native_host.bat  manifest.json  setup.html
extension/scripts/: build-extension.sh  release.sh
extension/tests/: background-routing.test.cjs  content-gdocs.test.cjs  gdocs-inject.test.cjs
gdocs/: Code.gs  Sidebar.html
native/whisper_wrapper/: CMakeLists.txt  spell_whisper.cpp
scripts/: Info.plist.template  Spell.entitlements  build-mac.sh  build-windows-local.ps1  diagnose-download.ps1  generate-dmg-background.py  generate-extension-icons.py  generate-ico.py  generate-icon.py  make-icns.sh  release-mac.sh  setup-windows-dev.ps1  test-focus-errors.sh
src/: bert_worker.rs  compound_walker.rs  downloader.rs  grammar_actor.rs  lib.rs  llm_actor.rs  logging.rs  main.rs  math_ocr.rs  microphone.rs  native_host.rs  ocr.rs  ocr_helper.swift  spelling_scorer.rs  test_bert_bench.rs  test_bert_spelling.rs  test_complete.rs  test_cw.rs  test_fotball.rs  test_gui.rs  test_mennesker.rs  test_prolog.rs  test_spelling.rs  test_tts.rs  test_userdict.rs  updates.rs  user_dict.rs
src/bridge/: accessibility_win.rs  ax_mac.rs  browser.rs  mod.rs  word_addin.rs  word_com.rs
src/latext_no/: mod.rs  parser.rs  substitutions.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/setup/: mod.rs  word_addin_setup.rs
src/stt/: macos_impl.rs  mod.rs  windows_impl.rs
src/tts/: macos_impl.rs  mod.rs  multi_backend.rs  piper_engine.rs  system_windows.rs  windows_impl.rs
test_data_en/: test_set_1.json  test_set_10.json  test_set_11.json  test_set_12.json  test_set_13.json  test_set_14.json  test_set_15.json  test_set_16.json  test_set_17.json  test_set_18.json  test_set_19.json  test_set_2.json  test_set_20.json  test_set_21.json  test_set_22.json  test_set_23.json  test_set_24.json  test_set_25.json  test_set_26.json  test_set_27.json  test_set_28.json  test_set_29.json  test_set_3.json  test_set_30.json  test_set_33.json  test_set_34.json  test_set_35.json  test_set_36.json  test_set_37.json  test_set_38.json  test_set_39.json  test_set_4.json  test_set_5.json  test_set_6.json  test_set_7.json  test_set_8.json  test_set_9.json
tests/: test_underline.py  test_windows.py
word-addin/: commands.html  commands.js  fullchain.pem  manifest.xml  serve.py  taskpane.html  taskpane.js
