[package]
name = "acatts-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
anyhow = "1"
libloading = "0.8"
nostos-cognio = { path = "../../contexter-repo/nostos-cognio" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Media_Ocr",
    "Graphics_Imaging",
    "Globalization",
    "Storage_Streams",
]

[[bin]]
name = "test-gui"
path = "src/test_gui.rs"

[[bin]]
name = "test-complete"
path = "src/test_complete.rs"

[[bin]]
name = "test-mennesker"
path = "src/test_mennesker.rs"

[[bin]]
name = "test-tts"
path = "src/test_tts.rs"
