[package]
name = "acatts-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
anyhow = "1"
redb = "2"
dirs = "6"
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = "0.20"
ndarray = "0.16"
libloading = "0.8"
nostos-cognio = { path = "../contexter-repo/nostos-cognio" }
regex = "1"
image = "0.25"
mtag = { package = "mtag-rs", path = "../rustSpell/mtag-rs" }
rustls = "0.23"
rustls-pemfile = "2"
native-tls = "0.2"
cpal = "0.15"
rubato = "0.14"
hound = "3.5"
ureq = { version = "2", features = ["json"] }
fst = { version = "0.4", features = ["levenshtein"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1"
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"
block = "0.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Media_Ocr",
    "Graphics_Imaging",
    "Globalization",
    "Storage_Streams",
]

[[bin]]
name = "test-gui"
path = "src/test_gui.rs"

[[bin]]
name = "test-complete"
path = "src/test_complete.rs"

[[bin]]
name = "test-mennesker"
path = "src/test_mennesker.rs"

[[bin]]
name = "test-tts"
path = "src/test_tts.rs"

[[bin]]
name = "test-fotball"
path = "src/test_fotball.rs"

[[bin]]
name = "test-cw"
path = "src/test_cw.rs"

[[bin]]
name = "test-prolog"
path = "src/test_prolog.rs"

[[bin]]
name = "test-spelling"
path = "src/test_spelling.rs"

[[bin]]
name = "test-userdict"
path = "src/test_userdict.rs"

[[bin]]
name = "test-bert-spelling"
path = "src/test_bert_spelling.rs"

[[bin]]
name = "test-bert-bench"
path = "src/test_bert_bench.rs"

[[bin]]
name = "test-compound-bert"
path = "src/bin/test_compound_bert.rs"

[[bin]]
name = "test-suggest"
path = "src/bin/test_suggest.rs"

[[bin]]
name = "test-right-completions"
path = "src/bin/test_right_completions.rs"

[[bin]]
name = "test-complete-i"
path = "src/bin/test_complete_i.rs"
